<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_gravity="center"
           android:padding="20dp"
           >


           <EditText
               android:id="@+id/Mobile_Number"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"

               android:layout_margin="@dimen/layout_margin"
               android:background="@drawable/roundtextview"
               android:hint="@string/mobile_number"
               android:inputType="phone"
               android:padding="@dimen/edittextsize"
               android:drawableLeft="@drawable/ic_vintage_cellphone"
               android:drawablePadding="10dp"


               />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/Password"
               android:layout_margin="@dimen/layout_margin"
               android:hint="@string/password"
               android:inputType="textPassword"
               android:background="@drawable/roundtextview"
               android:padding="@dimen/edittextsize"
               android:drawableLeft="@drawable/ic_key"
               android:drawablePadding="10dp"/>


           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/layout_margin"
               android:id="@+id/btnLogin"
               android:background="#ad1457"
               android:text="@string/loginbutton"
               android:textColor="@color/textcolorwhite"
               android:textSize="@dimen/buttontextsize" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/forgot_pwd"
               android:text="@string/forgot_password"
               android:textSize="20dp"
               android:padding="@dimen/textpadding"
               android:textColor="@color/textviewcolor"
               android:gravity="center"

               />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ChangePassword"
               android:text="@string/change_password"
               android:textSize="20dp"
               android:padding="@dimen/textpadding"
               android:textColor="@color/textviewcolor"
               android:gravity="center"

               />
       </LinearLayout>

    </ScrollView>


</RelativeLayout>