<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textSize="20dp"
                android:padding="@dimen/textpadding"
                android:textColor="@color/textviewcolor"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/OldPassword"
                android:layout_margin="10dp"
                android:hint="@string/enter_oldpassword_hint"
                android:inputType="textPassword"
                android:background="@drawable/roundtextview"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/New_password"
                android:textSize="20dp"
                android:padding="@dimen/textpadding"
                android:textColor="@color/textviewcolor"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NewPassword"
                android:layout_margin="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:background="@drawable/roundtextview"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_hint"
                android:textSize="20dp"
                android:padding="@dimen/textpadding"
                android:textColor="@color/textviewcolor"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ConfirmNewPassword"
                android:layout_margin="10dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:background="@drawable/roundtextview"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/btnsubmit"
                android:background="#ad1457"
                android:text="@string/submitbutton"
                android:textColor="@color/textcolorwhite"
                android:textSize="@dimen/buttontextsize" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>