<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Admin.AdminAddUserActivity"
    tools:showIn="@layout/activity_admin_add_user">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/roundtextview"
                android:hint="@string/Username"
                android:inputType="text"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_vintage_cellphone"

                />

            <EditText
            android:id="@+id/MobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/roundtextview"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:padding="@dimen/edittextsize"
            android:drawableLeft="@drawable/ic_vintage_cellphone"

            />

            <EditText
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/roundtextview"
                android:hint="@string/UserEmail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_vintage_cellphone"

                />

            <EditText
                android:id="@+id/UserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/roundtextview"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_vintage_cellphone"

                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UserType"
                android:padding="20dp"
                ></Spinner>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UserFlat"
                android:padding="20dp"
                android:visibility="gone"
                android:layout_margin="@dimen/layout_margin"

                ></Spinner>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BlockYes"
                    android:text="@string/yes"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BlockNo"
                    android:text="@string/no"
                    />
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RentYes"
                android:text="@string/yes"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RentNo"
                android:text="@string/no"
                />

            </RadioGroup>

            <EditText
                android:id="@+id/AadharNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/roundtextview"
                android:hint="@string/UserAadharNumber"
                android:inputType="number"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_vintage_cellphone"

                />


            <EditText
                android:id="@+id/TotalFlatMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/roundtextview"
                android:inputType="number"
                android:hint="@string/FlatMember"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_vintage_cellphone"
                />


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/HcategoryName"
                android:visibility="gone"
                ></Spinner>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/YesUserisAvailable"
                android:text="@string/yes"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/NoUserisAvailable"
                android:text="@string/no"

                />

            </RadioGroup>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:id="@+id/btnUserSubmit"
                android:background="#ad1457"
                android:text="@string/submitbutton"
                android:textColor="@color/textcolorwhite"
                android:textSize="@dimen/buttontextsize" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>