<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PwdChange"
    tools:showIn="@layout/activity_pwd_change">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp"
            >


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Password"
                android:layout_margin="@dimen/layout_margin"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:background="@drawable/roundtextview"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="10dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ConfirmPassword"
                android:layout_margin="@dimen/layout_margin"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:background="@drawable/roundtextview"
                android:padding="@dimen/edittextsize"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:id="@+id/btnsubmit"
                android:background="#ad1457"
                android:text="@string/submitbutton"
                android:textColor="@color/textcolorwhite"
                android:textSize="@dimen/buttontextsize" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>